discussion/kv_engine/177834/177834_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Test performance with f14 vs std::unordered_map

Change-Id: I0edcfebe6b4d61d78d6a310ff48fd6f36cfb73b0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-07-21 11:52:36.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-21 12:27:41.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19117/ : FAILURE

clang-tidy found the following problems:

<pre>
error: too many errors emitted, stopping now [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:154:27: error: no template named "F14FastMap" in namespace "folly" [clang-diagnostic-error]
    using Labels = folly::F14FastMap<const char*,
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:173:32: error: unknown type name "Labels" [clang-diagnostic-error]
                         const Labels& labels) const = 0;
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:179:32: error: unknown type name "Labels" [clang-diagnostic-error]
                         const Labels& labels) const = 0;
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:191:32: error: unknown type name "Labels" [clang-diagnostic-error]
                         const Labels& labels) const = 0;
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:194:32: error: unknown type name "Labels" [clang-diagnostic-error]
                         const Labels& labels) const = 0;
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:197:32: error: unknown type name "Labels" [clang-diagnostic-error]
                         const Labels& labels) const = 0;
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:200:32: error: unknown type name "Labels" [clang-diagnostic-error]
                         const Labels& labels) const = 0;
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:210:32: error: unknown type name "Labels" [clang-diagnostic-error]
                         const Labels& labels) const = 0;
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:218:32: error: unknown type name "Labels" [clang-diagnostic-error]
                         const Labels& labels) const = 0;
                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:229:24: error: unknown type name "Labels" [clang-diagnostic-error]
                 const Labels& labels) const {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:241:58: error: unknown type name "Labels" [clang-diagnostic-error]
    void addStat(const cb::stats::StatDef& k, T v, const Labels& labels) const {
                                                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:272:24: error: unknown type name "Labels" [clang-diagnostic-error]
                 const Labels& labels) const {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:310:24: error: unknown type name "Labels" [clang-diagnostic-error]
                 const Labels& labels) const
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:328:49: error: unknown type name "Labels" [clang-diagnostic-error]
    void addStat(cb::stats::Key k, T&& v, const Labels& labels) const {
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/prometheus_collector.h:36:20: error: no template named "F14FastMap" in namespace "folly" [clang-diagnostic-error]
            folly::F14FastMap<std::string, prometheus::MetricFamily>&
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/prometheus_collector.h:48:24: error: unknown type name "Labels" [clang-diagnostic-error]
                 const Labels& labels) const override {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/prometheus_collector.h:54:24: error: unknown type name "Labels" [clang-diagnostic-error]
                 const Labels& labels) const override {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/prometheus_collector.h:60:24: error: unknown type name "Labels" [clang-diagnostic-error]
                 const Labels& labels) const override {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/prometheus_collector.h:66:24: error: unknown type name "Labels" [clang-diagnostic-error]
                 const Labels& labels) const override {
                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:25:28: error: no template named "F14FastMap" in namespace "folly" [clang-diagnostic-error]
    using StatMap = folly::F14FastMap<std::string, prometheus::MetricFamily>;
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:30:9: error: unknown type name "StatMap" [clang-diagnostic-error]
        StatMap high;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:31:9: error: unknown type name "StatMap" [clang-diagnostic-error]
        StatMap low;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/statistics/prometheus_test.h:32:9: error: unknown type name "StatMap" [clang-diagnostic-error]
        StatMap metering;
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19117/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/collector.h:154:27:
error: no template named "F14FastMap" in namespace "folly" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19117/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40292/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/statistics/collector.h:154:27:
error: no template named "F14FastMap" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40292/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8803/ : FAILURE

Compile error at [2022-07-21T11:55:29.173Z] ../kv_engine/include/statistics/collector.h:154:27:
error: no template named "F14FastMap" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8803/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22086/ : FAILURE

ThreadSanitizer issue: data race (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x38f1a) in pthread_mutex_destroy  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22086/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18282/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47949/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20270/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21024/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21384/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8899/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29419/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
